# ipc_in_linux

./: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake
message_queue/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  queue.h  receiver.c  sender.c
pipes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fifoReader.c  fifoWriter.c  pipeUN.c
shared_files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  consumer.c  producer.c
shared_memory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  memreader.c  memwriter.c  shmem.h
signals/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  shutdown.c
sockets/: CMakeCache.txt  CMakeLists.txt  Makefile  client.c  cmake_install.cmake  server.c  sock.h
